<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDividerLight"
    android:orientation="vertical"
    tools:context="com.ndanh.mytranslator.screen.settings.SettingActivity">

    <LinearLayout
        android:id="@+id/header_history_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/action_back"
                android:layout_width="@dimen/normal_icon_width"
                android:layout_height="@dimen/normal_icon_height"
                android:fitsSystemWindows="true"
                android:padding="@dimen/increase_area_clickable"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/back_page"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_header"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_start_mode"
                android:textAllCaps="true"
                android:textColor="#000000"/>

            <ListView
                android:id="@+id/lst_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:divider="@drawable/list_divider"
                android:dividerHeight="1dp"
                tools:layout_height="180dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:id="@+id/iv_clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_display_language"
                android:textAllCaps="true"
                android:textColor="#000000"/>

            <LinearLayout
                android:background="@drawable/bg_setting_item"
                android:id="@+id/ll_language_display"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/normal_icon_width"
                    android:layout_height="@dimen/normal_icon_height"
                    android:padding="@dimen/increase_area_clickable"
                    app:srcCompat="@drawable/ic_setting_display"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_text"
                    android:text="@string/text_display"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/iv_flag_display"
                    android:layout_width="@dimen/normal_icon_width"
                    android:layout_height="@dimen/normal_icon_height"
                    android:padding="@dimen/increase_area_clickable"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:background="@color/colorDivider"/>

            <LinearLayout
                android:background="@drawable/bg_setting_item"
                android:gravity="center_vertical"
                android:id="@+id/ll_language_translate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/normal_icon_width"
                    android:layout_height="@dimen/normal_icon_height"
                    android:padding="@dimen/increase_area_clickable"
                    app:srcCompat="@drawable/ic_setting_translate"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_text"
                    android:text="@string/text_translate"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/iv_flag_translate"
                    android:layout_width="@dimen/normal_icon_width"
                    android:layout_height="@dimen/normal_icon_height"
                    android:padding="@dimen/increase_area_clickable"/>
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
